k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: texas-holdem-frontend
  namespace: texas-holdem
  labels:
    app: texas-holdem
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: texas-holdem
      component: frontend
  template:
    metadata:
      labels:
        app: texas-holdem
        component: frontend
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: frontend
          # Replace with your image
          image: us-central1-docker.pkg.dev/texasholdeem/texasholdem/frontend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: texas-holdem-frontend
  namespace: texas-holdem
spec:
  selector:
    app: texas-holdem
    component: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
